--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -15,9 +15,9 @@
       "\n",
       "🔹 Similarity Score: 0.62\n",
       "\n",
-      "✅ Keywords to Add (Missing from Resume): {'ensure', 'verbal', 'mcsa', 'clients', 'qualifications', 'assisting', 'resources', 'administer', 'consult', 'site', 'saved', 'job', 'extensive', 'date', 'duties', 'growing', 'responsibilities', 'features', 'mta', 'years', 'candidates', 'meet', 'licensure', 'mcse', 'mcitp', 'data', 'required', 'equipment', 'following', 'respond', 'degree', 'members', 'candidate', 'skilled', 'perform', 'seeking', 'skills', 'ccnp', 'vendors', 'field', 'update', 'monitor', 'responsible', 'support', 'improvements', 'phone', 'ccdp', 'set', 'high', 'cissp', 'position', 'evaluate', 'helpdesk', 'protection', 'maintenance', 'ceh', 'updating', 'role', 'excellent', 'integrate', 'equivalent', 'oversee', 'installing', 'school', 'professional', 'communication', 'mcp', 'employees', 'ccna', 'etc', 'casp', 'minimum', 'owned', 'install', 'optimization', 'gsec', 'background', 'preference', 'organization', 'join', 'gcih', 'written', 'ccda', 'visits', 'certification', 'industry', 'configure', 'assist', 'firewalls', 'provide', 'backups', 'preferred', 'coverage', 'given'}\n",
+      "✅ Keywords to Add (Missing from Resume): {'background', 'vendors', 'coverage', 'install', 'join', 'ccdp', 'duties', 'required', 'organization', 'ceh', 'seeking', 'improvements', 'written', 'licensure', 'responsibilities', 'responsible', 'phone', 'gcih', 'owned', 'cissp', 'perform', 'gsec', 'meet', 'candidates', 'administer', 'school', 'ccna', 'degree', 'position', 'installing', 'following', 'integrate', 'high', 'mcsa', 'industry', 'mcse', 'mcp', 'skills', 'mta', 'assisting', 'etc', 'updating', 'ccnp', 'qualifications', 'equivalent', 'date', 'support', 'extensive', 'assist', 'consult', 'protection', 'optimization', 'minimum', 'evaluate', 'ensure', 'resources', 'firewalls', 'maintenance', 'candidate', 'saved', 'professional', 'role', 'growing', 'communication', 'skilled', 'data', 'monitor', 'given', 'set', 'employees', 'provide', 'mcitp', 'verbal', 'ccda', 'preferred', 'casp', 'clients', 'backups', 'preference', 'configure', 'years', 'helpdesk', 'excellent', 'members', 'visits', 'features', 'field', 'job', 'site', 'equipment', 'respond', 'oversee', 'update', 'certification'}\n",
       "\n",
-      "❌ Keywords to Remove (Not Relevant to Job): {'implementing', 'migrating', 'areas', 'help', 'veritas', 'devices', 'administration', 'applications', 'exec', 'vbscript', 'nmap', 'participated', 'focused', 'certificates', 'diagrams', 'foundation', 'case', 'backup', 'vista', 'rights', 'certifications', 'batch', 'project', 'plans', 'procedural', 'researching', 'vault', 'html', 'objectives', 'test', 'possessing', 'solarwinds', 'appliances', 'disaster', 'procedures', 'explain', 'services', 'states', 'languages', 'dynamic', 'scanners', 'miamibiz', 'goals', 'permissions', 'domain', 'staas', 'logs', 'conceptualization', 'lers', 'exceptional', 'mcafee', 'framework', 'ubuntu', 'machines', 'escalated', 'sync', 'tra', 'reviewing', 'understanding', 'demonstrate', 'running', 'online', 'receive', 'bash', 'vpn', 'user', 'recovery', 'designing', 'current', 'teams', 'veeamvirtual', 'o', 'detailed', 'web', 'database', 'programming', 'dcs', 'achieve', 'univeristy', 'desk', 'administrator', 'evaluating', 'iaas', 'skils', 'sql', 'command', 'fice', 'systemproblems', 'monitoring', 'independent', 'environment', 'phases', 'includes', 'manager', 'specifications', 'logical', 'cause', 'gpos', 'internet', 'resolving', 'isa', 'insta', 'existing', 'depth', 'basic', 'communicating', 'troubleshoot', 'xp', 'cacti', 'changes', 'datadomain', 'ling', 'cost', 'fic', 'scripts', 'netbackup', 'analysis', 'iscsi', 'exchange', 'livestate', 'technicians', 'superior', 'creating', 'compiling', 'deployment', 'mvc', 'operating', 'statistical', 'testing', 'systematic', 'city', 'received', 'browsers', 'versatile', 'center', 'hot', 'participating', 'acquisition', 'apple', 'bbars', 'standards', 'oriented', 'research', 'array', 'machine', 'firewa', 'configuring', 'problems', 'co', 'documentation', 'flow', 'local', 'unit', 'page', 'active', 'reporting', 'intranet', 'vbs', 'shares', 'viability', 'scheduling', 'patches', 'requests', 'business', 'acceptance', 'vdi', 'virtualization', 'managing', 'jsp', 'life', 'script', 'acceleration', 'solving', 'programs', 'accounts', 'sharepoint', 'united', 'laptops', 'objects', 'solar', 'fixes', 'quality', 'ntfs', 'complex', 'projects', 'client', 't', 'workstations', 'service', 'mobile', 'microsoft', 'highlights', 'configuration', 'windows', 'ldap', 'aug', 'policies', 'router', 'utilities', 'dns', 'manchine', 'planning', 'veeam', 'css', 'linux', 'adding', 'systemand', 'demonstrated', 'migration', 'files', 'international', 'protocol', 'recommending', 'taking', 'baas', 'virtual', 'adfs', 'plan', 'telephone', 'debugging', 'storsimple', 'vranger', 'tfs', 'print', 'protocols', 'cisco', 'asa', 'l', 'pc', 'host', 'analyses', 'application', 'release', 'vmware', 'benefit', 'studio', 'laborating', 'sta', 'enterprise', 'coursework', 'printers', 'functionality', 'twinstrata', 'detail', 'phase', 'powershe', 'determining', 'generating', 'giving', 'administering', 'end', 'cycle', 'defining', 'documents', 'anti', 'training', 'epo', 'federation', 'ios', 'gpo', 'applying', 'education', 'emc', 'desktop', 'florida', 'develop', 'symantec', 'party', 'presentations', 'guidelines', 'sms', 'ip', 'open', 'logging', 'root', 'blackberry', 'desktops', 'proxy', 'analyzing', 'azure', 'infrastructure', 'shared', 'developing', 'hyperion', 'dhcp', 'preparing', 'cloud', 'tcp', 'iis', 'storage', 'file', 'contro', 'assurance', 'liaison', 'winds', 'android', 'websites', 'concerning', 'java', 'tmg', 'product', 'sccm', 'technician', 'vsphere', 'departmental', 'visual', 'distributed', 'zenmap', 'removing', 'approach', 'fering'}\n"
+      "❌ Keywords to Remove (Not Relevant to Job): {'protocols', 'areas', 'tfs', 'twinstrata', 'scanners', 'business', 'unit', 'ubuntu', 'vsphere', 'blackberry', 'oriented', 'batch', 'winds', 'netbackup', 'bash', 'product', 'adfs', 'functionality', 'azure', 'training', 'recovery', 'foundation', 'epo', 'univeristy', 'versatile', 'assurance', 'sccm', 'exceptional', 'cloud', 'iis', 'reviewing', 'vault', 'coursework', 'release', 'current', 'languages', 'acceleration', 'analyzing', 'html', 'approach', 'veritas', 'giving', 'education', 'statistical', 'scripts', 'depth', 'emc', 'storage', 'systematic', 'complex', 'proxy', 'adding', 'highlights', 'phases', 'resolving', 'vpn', 'systemproblems', 'protocol', 'virtual', 'machines', 'exec', 'managing', 'test', 'administrator', 'includes', 'escalated', 'vista', 'machine', 'received', 'intranet', 'sync', 'print', 'conceptualization', 'ntfs', 'phase', 'vdi', 'party', 'vbscript', 'goals', 'sms', 'analysis', 'city', 'monitoring', 'explain', 'existing', 'independent', 'operating', 'detail', 'miamibiz', 'shares', 'android', 'bbars', 'browsers', 'focused', 'files', 'asa', 'workstations', 'documents', 'accounts', 'tmg', 'tra', 'procedures', 'technician', 'staas', 'symantec', 'specifications', 'debugging', 'fic', 'websites', 'tcp', 'possessing', 'plans', 'laptops', 'changes', 'powershe', 'lers', 'participated', 'css', 'root', 'ling', 'vranger', 'documentation', 'manager', 'livestate', 'reporting', 'local', 'flow', 'programs', 'presentations', 'acquisition', 'diagrams', 'programming', 'creating', 'xp', 'nmap', 'testing', 'ios', 'veeam', 'cause', 'enterprise', 'file', 'open', 'compiling', 'federation', 'aug', 'desk', 'superior', 'implementing', 'vmware', 'removing', 'procedural', 'defining', 'command', 'understanding', 'page', 'help', 'solar', 'distributed', 'storsimple', 'apple', 'administering', 'iscsi', 'mcafee', 'environment', 'benefit', 'solving', 'zenmap', 'fixes', 'develop', 'sharepoint', 'mobile', 'shared', 'guidelines', 'online', 'permissions', 'basic', 'plan', 'united', 'technicians', 'achieve', 'life', 'fering', 'ip', 'linux', 'logging', 'departmental', 'systemand', 'mvc', 'evaluating', 'projects', 'participating', 'firewa', 'teams', 'florida', 'research', 'visual', 'gpo', 'communicating', 'web', 'hot', 'applying', 'devices', 'insta', 'services', 'logs', 'dns', 'veeamvirtual', 'objects', 'studio', 'cycle', 'cost', 'active', 'recommending', 'deployment', 'backup', 'administration', 'demonstrated', 'liaison', 'sql', 'certificates', 'dynamic', 'determining', 't', 'windows', 'exchange', 'applications', 'sta', 'standards', 'configuration', 'viability', 'troubleshoot', 'preparing', 'desktop', 'appliances', 'jsp', 'running', 'certifications', 'objectives', 'problems', 'java', 'case', 'analyses', 'patches', 'concerning', 'utilities', 'quality', 'application', 'client', 'dhcp', 'co', 'developing', 'array', 'researching', 'disaster', 'l', 'o', 'migration', 'migrating', 'solarwinds', 'acceptance', 'iaas', 'states', 'hyperion', 'contro', 'isa', 'manchine', 'international', 'database', 'generating', 'fice', 'baas', 'taking', 'designing', 'service', 'planning', 'dcs', 'center', 'laborating', 'anti', 'rights', 'scheduling', 'pc', 'gpos', 'skils', 'user', 'configuring', 'ldap', 'requests', 'virtualization', 'infrastructure', 'logical', 'datadomain', 'telephone', 'domain', 'receive', 'internet', 'policies', 'detailed', 'cisco', 'cacti', 'project', 'printers', 'host', 'desktops', 'router', 'end', 'vbs', 'framework', 'microsoft', 'demonstrate', 'script'}\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "b177d794-7556-4170-b41d-2e80076dc89f",
    "metadata": {},
    "outputs": [
@@ -127,130 +127,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "073830ec-0a48-4cbf-8c0a-1bce285a12c2",
+   "execution_count": 45,
+   "id": "df7ef8b7-6536-4747-8992-c35176bfebc6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master (root-commit) 04bfa6f] Your commit message\n",
-      " 6 files changed, 134 insertions(+)\n",
+      "[main a9ba264] Your commit message here\n",
+      " 3 files changed, 952 insertions(+)\n",
       " create mode 100644 .ipynb_checkpoints/Untitled-checkpoint.ipynb\n",
-      " create mode 100644 10089434.pdf\n",
       " create mode 100644 Untitled.ipynb\n",
-      " create mode 100644 job_description.docx\n",
-      " create mode 100644 resume.docx\n",
-      " create mode 100644 ~$b_description.docx\n"
+      " create mode 100644 job_description.docx\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"Your commit message\"\n"
+    "!git commit -m \"Your commit message here\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5d0a9a89-2c62-41c6-8f96-730254be398f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git remote add origin https://github.com/deadpool-kha/Python-Assignment\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "dcda271d-c784-47c7-911a-a6117074ead0",
+   "execution_count": 47,
+   "id": "152bcad6-6195-41e5-876a-ebe0effffbce",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "error: src refspec main does not match any\n",
-      "error: failed to push some refs to 'https://github.com/deadpool-kha/Python-Assignment'\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git push -u origin main\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "4d5b3d0d-0498-4ed9-9d85-07576803e3ba",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "error: pathspec 'main' did not match any file(s) known to git\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git checkout main\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "b1c4d14d-7568-4828-855a-498db8d6ee96",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "From https://github.com/deadpool-kha/Python-Assignment\n",
-      " * [new branch]      main       -> origin/main\n",
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tUntitled.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git fetch origin\n",
-    "!git checkout main\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "732f1c97-ba43-4298-aa96-bd8b13d09e5a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Already up to date.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git merge master\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "4b4f6a8a-8b7d-479c-9253-bb07a2ec9c70",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "error: src refspec main does not match any\n",
-      "error: failed to push some refs to 'https://github.com/deadpool-kha/Python-Assignment'\n"
+      "To https://github.com/deadpool-kha/Python-Assignment\n",
+      "   e2c465d..a9ba264  main -> main\n"
      ]
     }
    ],
@@ -260,196 +168,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "8333b346-68b9-450a-b57e-79a0d484eb96",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "error: cannot delete branch 'master' used by worktree at 'E:/Python ko new'\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git branch -d master\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "e056cf66-adfd-4987-b4d1-57599fc47a61",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tUntitled.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git checkout main\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "d03d973c-01eb-4e36-887d-108d1fe2bbe0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tUntitled.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git fetch origin\n",
-    "!git checkout main\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "59f23923-4511-4994-a174-b5c2897a3d32",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'Untitled.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git add Untitled.ipynb\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "11c00dd3-5885-4415-890a-35de321e8334",
+   "execution_count": 49,
+   "id": "9edace47-9f0d-4c99-ab32-cecd5eb2ab4b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 42db2f9] Save work on Untitled.ipynb before switching branches\n",
-      " 1 file changed, 164 insertions(+), 1 deletion(-)\n"
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   Untitled.ipynb\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"Save work on Untitled.ipynb before switching branches\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "b5a89f50-971c-4a90-a5ee-49d8f1ea361d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "branch 'main' set up to track 'origin/main'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: unable to unlink 'job_description.docx': Invalid argument\n",
-      "Switched to a new branch 'main'\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git checkout main\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "21254905-a21d-404c-8120-9a1c78e455e7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No local changes to save\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git stash\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "7a3fd395-ac09-4755-b13f-10da9802e9b5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your branch is up to date with 'origin/main'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Already on 'main'\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git checkout main\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "8012b7a7-7c2f-49c9-83fa-088064f8354c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No stash entries found.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git stash apply\n"
+    "!git status\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13437b24-5d77-49d5-b16c-613f69ae3fee",
+   "id": "53a4d04a-b24a-4821-bd93-4a7128424cfc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!git add file1.docx\n"
+   ]
   }
  ],
  "metadata": {
