--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "6ae6e639-3893-45a1-b684-dc6990ac57b6",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "b177d794-7556-4170-b41d-2e80076dc89f",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "warning: in the working copy of '.ipynb_checkpoints/Untitled-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'Untitled.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     }
@@ -127,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "df7ef8b7-6536-4747-8992-c35176bfebc6",
    "metadata": {},
    "outputs": [
@@ -135,21 +134,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main a9ba264] Your commit message here\n",
-      " 3 files changed, 952 insertions(+)\n",
-      " create mode 100644 .ipynb_checkpoints/Untitled-checkpoint.ipynb\n",
-      " create mode 100644 Untitled.ipynb\n",
-      " create mode 100644 job_description.docx\n"
+      "[main 5a319f9] New code\n",
+      " 2 files changed, 29 insertions(+), 278 deletions(-)\n",
+      " create mode 100644 resume.docx\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"Your commit message here\"\n"
+    "!git commit -m \"New code \"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "152bcad6-6195-41e5-876a-ebe0effffbce",
    "metadata": {},
    "outputs": [
@@ -158,7 +155,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/deadpool-kha/Python-Assignment\n",
-      "   e2c465d..a9ba264  main -> main\n"
+      "   a9ba264..5a319f9  main -> main\n"
      ]
     }
    ],
@@ -168,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "9edace47-9f0d-4c99-ab32-cecd5eb2ab4b",
    "metadata": {},
    "outputs": [
@@ -179,12 +176,7 @@
       "On branch main\n",
       "Your branch is up to date with 'origin/main'.\n",
       "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\tmodified:   Untitled.ipynb\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+      "nothing to commit, working tree clean\n"
      ]
     }
    ],
@@ -201,6 +193,33 @@
    "source": [
     "!git add file1.docx\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8f0193bf-b880-4c26-a3f8-b79543cf8bcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (339777499.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[13], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    git status\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "git status\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "341f52a7-29d6-4784-8b10-ccc6faa05e17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
