--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "3546e862-2d29-4182-87d8-257f08ee2664",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialized empty Git repository in E:/Python ko new/.git/\n"
+      "Reinitialized existing Git repository in E:/Python ko new/.git/\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "3958a58d-7db7-44f2-99aa-8f60717761a1",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "b177d794-7556-4170-b41d-2e80076dc89f",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "df7ef8b7-6536-4747-8992-c35176bfebc6",
    "metadata": {},
    "outputs": [
@@ -134,9 +134,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 5a319f9] New code\n",
-      " 2 files changed, 29 insertions(+), 278 deletions(-)\n",
-      " create mode 100644 resume.docx\n"
+      "[main 713b679] New code\n",
+      " 1 file changed, 38 insertions(+), 19 deletions(-)\n"
      ]
     }
    ],
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "152bcad6-6195-41e5-876a-ebe0effffbce",
    "metadata": {},
    "outputs": [
@@ -155,7 +154,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/deadpool-kha/Python-Assignment\n",
-      "   a9ba264..5a319f9  main -> main\n"
+      "   5a319f9..713b679  main -> main\n"
      ]
     }
    ],
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "9edace47-9f0d-4c99-ab32-cecd5eb2ab4b",
    "metadata": {},
    "outputs": [
@@ -190,9 +189,7 @@
    "id": "53a4d04a-b24a-4821-bd93-4a7128424cfc",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!git add file1.docx\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -210,7 +207,7 @@
     }
    ],
    "source": [
-    "git status\n"
+    "\n"
    ]
   },
   {
