Initial commit: Added src code, output screenshots, and assets

--- a/src/Untitled.ipynb
+++ b/src/Untitled.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "3958a58d-7db7-44f2-99aa-8f60717761a1",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "b177d794-7556-4170-b41d-2e80076dc89f",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "df7ef8b7-6536-4747-8992-c35176bfebc6",
    "metadata": {},
    "outputs": [
@@ -134,8 +134,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 713b679] New code\n",
-      " 1 file changed, 38 insertions(+), 19 deletions(-)\n"
+      "[main a550dfc] New code\n",
+      " 4 files changed, 12 insertions(+), 15 deletions(-)\n",
+      " create mode 100644 ScreenShot/Code 2.png\n",
+      " create mode 100644 ScreenShot/Code.png\n",
+      " create mode 100644 ScreenShot/Output.png\n"
      ]
     }
    ],
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "152bcad6-6195-41e5-876a-ebe0effffbce",
    "metadata": {},
    "outputs": [
@@ -154,7 +157,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/deadpool-kha/Python-Assignment\n",
-      "   5a319f9..713b679  main -> main\n"
+      "   713b679..a550dfc  main -> main\n"
      ]
     }
    ],
@@ -164,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "9edace47-9f0d-4c99-ab32-cecd5eb2ab4b",
    "metadata": {},
    "outputs": [
