--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -198,8 +198,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bb207c7e-78d9-4d66-a04e-d659b3dd0823",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, messagebox\n",
+    "import re\n",
+    "from docx import Document\n",
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "\n",
+    "# Function to read text from a .docx file\n",
+    "def read_docx(file_path):\n",
+    "    doc = Document(file_path)\n",
+    "    text = \"\\n\".join([para.text for para in doc.paragraphs])\n",
+    "    return text\n",
+    "\n",
+    "# Function to analyze CV and Job Description\n",
+    "def analyze_files(cv_path, jd_path):\n",
+    "    if not cv_path or not jd_path:\n",
+    "        messagebox.showerror(\"Error\", \"Please upload both Resume and Job Description.\")\n",
+    "        return\n",
+    "    \n",
+    "    cv_text = read_docx(cv_path)\n",
+    "    jd_text = read_docx(jd_path)\n",
+    "    \n",
+    "    model = SentenceTransformer('all-MiniLM-L6-v2')\n",
+    "    embeddings = model.encode([cv_text, jd_text], convert_to_tensor=True)\n",
+    "    similarity_score = util.pytorch_cos_sim(embeddings[0], embeddings[1]).item()\n",
+    "    \n",
+    "    messagebox.showinfo(\"Analysis Complete\", f\"Similarity Score: {similarity_score:.2f}\")\n",
+    "\n",
+    "# GUI Setup\n",
+    "root = tk.Tk()\n",
+    "root.title(\"CV vs Job Description Comparator\")\n",
+    "root.geometry(\"500x300\")\n",
+    "\n",
+    "cv_path = \"\"\n",
+    "jd_path = \"\"\n",
+    "\n",
+    "def upload_cv():\n",
+    "    global cv_path\n",
+    "    cv_path = filedialog.askopenfilename(filetypes=[(\"Word Documents\", \"*.docx\")])\n",
+    "    cv_label.config(text=f\"Uploaded: {cv_path.split('/')[-1]}\")\n",
+    "\n",
+    "def upload_jd():\n",
+    "    global jd_path\n",
+    "    jd_path = filedialog.askopenfilename(filetypes=[(\"Word Documents\", \"*.docx\")])\n",
+    "    jd_label.config(text=f\"Uploaded: {jd_path.split('/')[-1]}\")\n",
+    "\n",
+    "# UI Elements\n",
+    "tk.Label(root, text=\"Upload Resume (CV)\").pack()\n",
+    "cv_label = tk.Label(root, text=\"No file uploaded\", fg=\"gray\")\n",
+    "cv_label.pack()\n",
+    "tk.Button(root, text=\"Upload Resume\", command=upload_cv).pack()\n",
+    "\n",
+    "tk.Label(root, text=\"Upload Job Description\").pack()\n",
+    "jd_label = tk.Label(root, text=\"No file uploaded\", fg=\"gray\")\n",
+    "jd_label.pack()\n",
+    "tk.Button(root, text=\"Upload Job Description\", command=upload_jd).pack()\n",
+    "\n",
+    "tk.Button(root, text=\"Start Analysis\", command=lambda: analyze_files(cv_path, jd_path)).pack()\n",
+    "\n",
+    "root.mainloop()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ed208aa-fa60-497f-b007-87d9a3aeed32",
    "metadata": {},
    "outputs": [],
    "source": []
