Added all files and folders to the repository

--- a/src/New_Test.ipynb
+++ b/src/New_Test.ipynb
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "21ee7a26-4035-4cff-934a-0cd3daccdfc1",
    "metadata": {},
    "outputs": [
@@ -786,34 +786,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: pathspec '#' did not match any files\n"
+      "warning: in the working copy of 'src/.ipynb_checkpoints/New_Test-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'src/New_Test.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch main\n",
-      "Your branch is ahead of 'origin/main' by 2 commits.\n",
-      "  (use \"git push\" to publish your local commits)\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\tmodified:   New_Test.ipynb\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+      "[main 5f45103] Fixed secret leak\n",
+      " 2 files changed, 266 insertions(+), 252 deletions(-)\n"
      ]
     }
    ],
    "source": [
-    "!git add .  # Stage all changes\n",
+    "!git add .  \n",
     "!git commit -m \"Fixed secret leak\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "b7673ae3-56ec-4dca-b715-4e340a2b7d3e",
    "metadata": {},
    "outputs": [
@@ -821,9 +814,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main b9f6a35] made new changes here with test\n",
-      " Date: Sun Mar 30 21:49:12 2025 -0400\n",
-      " 2 files changed, 130 insertions(+), 24 deletions(-)\n"
+      "[main 0b4e42e] Fixed secret leak\n",
+      " Date: Sun Mar 30 21:52:11 2025 -0400\n",
+      " 2 files changed, 266 insertions(+), 252 deletions(-)\n"
      ]
     }
    ],
@@ -833,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "e8de7bdc-178a-4117-aff4-abbd7f4fe10e",
    "metadata": {},
    "outputs": [
