Initial commit with files and folders

--- a/src/New_Test.ipynb
+++ b/src/New_Test.ipynb
@@ -869,8 +869,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "01797ec3-b077-4d38-a2be-0101033d6cdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'src/New_Test.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add .  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6bb1fdf9-e128-4850-8194-c06e8a6e18db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 9408977] Added all files and folders to the repository\n",
+      " 1 file changed, 11 insertions(+), 18 deletions(-)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"Added all files and folders to the repository\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "4e170e8e-5562-40c5-b0ec-99bfa5dc5439",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: src refspec # does not match any\n",
+      "error: src refspec Push does not match any\n",
+      "error: src refspec to does not match any\n",
+      "error: src refspec the does not match any\n",
+      "error: src refspec branch does not match any\n",
+      "error: src refspec of does not match any\n",
+      "error: src refspec the does not match any\n",
+      "error: src refspec remote does not match any\n",
+      "error: src refspec repository does not match any\n",
+      "error: failed to push some refs to 'https://github.com/deadpool-kha/Python-Assignment'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push origin main  # Push to the main branch of the remote repository\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5c4a509f-4990-4b84-b32d-698f7bbe29e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* main\n",
+      "  master\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git branch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f3746002-6064-49ef-ad4e-60df3d51bc88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "origin\thttps://github.com/deadpool-kha/Python-Assignment (fetch)\n",
+      "origin\thttps://github.com/deadpool-kha/Python-Assignment (push)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git remote -v\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "013ca74d-2fb1-4552-9571-49ca5cabca01",
    "metadata": {},
    "outputs": [],
    "source": []
