Initial commit with files and folders

--- a/src/New_Test.ipynb
+++ b/src/New_Test.ipynb
@@ -971,8 +971,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "013ca74d-2fb1-4552-9571-49ca5cabca01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "commit 94089777254094d8e31a0e2411b4ef97c96133fe\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Sun Mar 30 21:54:57 2025 -0400\n",
+      "\n",
+      "    Added all files and folders to the repository\n",
+      "\n",
+      "commit 0b4e42eea9b299427c48dbea77ae88992dc1e466\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Sun Mar 30 21:52:11 2025 -0400\n",
+      "\n",
+      "    Fixed secret leak\n",
+      "\n",
+      "commit b9f6a354539f60b37e0e9269f8b3d5f2b796d248\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Sun Mar 30 21:49:12 2025 -0400\n",
+      "\n",
+      "    made new changes here with test\n",
+      "\n",
+      "commit 4b8c1c7ea6f917af5b8cd305b7bc862c5323cbab\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Sun Mar 30 21:45:12 2025 -0400\n",
+      "\n",
+      "    made new test file which works\n",
+      "\n",
+      "commit f56ff5e17e02abd2fc422103560581ec67d22fa7\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Sat Mar 29 23:33:03 2025 -0400\n",
+      "\n",
+      "    Added new notebook .ipynb\n",
+      "\n",
+      "commit 1187006e9e3b7ad7c4b6dae66e27410f46bf8277\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Sun Mar 23 00:18:35 2025 -0400\n",
+      "\n",
+      "    U3\n",
+      "\n",
+      "commit e850b891bfa1ba65cc27dd51086ee52d95c863fb\n",
+      "Author: Angad Khanal <61683329+deadpool-kha@users.noreply.github.com>\n",
+      "Date:   Sun Mar 23 00:16:52 2025 -0400\n",
+      "\n",
+      "    u3\n",
+      "\n",
+      "commit d1c3353e58ea0a35df2353ee87e7782bced8b717\n",
+      "Author: Angad Khanal <61683329+deadpool-kha@users.noreply.github.com>\n",
+      "Date:   Sun Mar 23 00:15:52 2025 -0400\n",
+      "\n",
+      "    up2\n",
+      "\n",
+      "commit cc60e84ea5b00b7659042a2bb8e8aed97d251a43\n",
+      "Author: Angad Khanal <61683329+deadpool-kha@users.noreply.github.com>\n",
+      "Date:   Sun Mar 23 00:15:14 2025 -0400\n",
+      "\n",
+      "    up1\n",
+      "\n",
+      "commit f827b011af1a6e85ebf088ef4a01d5448c526fbf\n",
+      "Merge: 35d914c dc7e41b\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Sat Mar 22 22:19:35 2025 -0400\n",
+      "\n",
+      "    Resolved merge conflicts\n",
+      "\n",
+      "commit 35d914c6f7e3c229b9ffc2375b40a0d17a365be9\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Sat Mar 22 22:16:12 2025 -0400\n",
+      "\n",
+      "    Add requirements.txt\n",
+      "\n",
+      "commit dc7e41b55ccd4e5d2a1134faa717a6d7a387f82c\n",
+      "Author: Angad Khanal <61683329+deadpool-kha@users.noreply.github.com>\n",
+      "Date:   Sat Mar 22 22:11:22 2025 -0400\n",
+      "\n",
+      "    Update README.md\n",
+      "\n",
+      "commit f690493c64c234d9a55d6c2c5b151e00d473ee90\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Sat Mar 22 22:06:27 2025 -0400\n",
+      "\n",
+      "    Initial commit: Added src code, output screenshots, and assets\n",
+      "\n",
+      "commit a550dfcbf84a517e2e3047a29acbf52ac77b60ab\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Fri Feb 28 01:16:28 2025 -0500\n",
+      "\n",
+      "    New code\n",
+      "\n",
+      "commit 713b6795e047b820d55b23fddd6db7d8903fc9c1\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Sat Feb 15 17:49:08 2025 -0500\n",
+      "\n",
+      "    New code\n",
+      "\n",
+      "commit 5a319f977e2dc1c4d066908d82ba54ad2e0b4ab7\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Sat Feb 15 17:21:17 2025 -0500\n",
+      "\n",
+      "    New code\n",
+      "\n",
+      "commit a9ba264e3e8235c12ad666ed55a8bc0a24216dab\n",
+      "Author: Angad Khanal <khanalak07@gmail.com>\n",
+      "Date:   Sun Feb 2 15:58:33 2025 -0500\n",
+      "\n",
+      "    Your commit message here\n",
+      "\n",
+      "commit e2c465dc1e1830b69eb3293cc6f47dce9b757547\n",
+      "Author: Angad Khanal <61683329+deadpool-kha@users.noreply.github.com>\n",
+      "Date:   Sun Feb 2 15:45:09 2025 -0500\n",
+      "\n",
+      "    Initial commit\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git log\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "f675f54b-3852-4f61-8e80-aba87c909de5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 275e611] Initial commit with files and folders\n",
+      " 1 file changed, 103 insertions(+), 1 deletion(-)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add . \n",
+    "!git commit -m \"Initial commit with files and folders\"  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "72604d7c-5e2b-4a10-8b35-b24c593c8113",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "remote: error: GH013: Repository rule violations found for refs/heads/main.        \n",
+      "remote: \n",
+      "remote: - GITHUB PUSH PROTECTION        \n",
+      "remote:   â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”        \n",
+      "remote:     Resolve the following violations before pushing again        \n",
+      "remote: \n",
+      "remote:     - Push cannot contain secrets        \n",
+      "remote: \n",
+      "remote:             \n",
+      "remote:      (?) Learn how to resolve a blocked push        \n",
+      "remote:      https://docs.github.com/code-security/secret-scanning/working-with-secret-scanning-and-push-protection/working-with-push-protection-from-the-command-line#resolving-a-blocked-push        \n",
+      "remote:             \n",
+      "remote:             \n",
+      "remote:       â€”â€” OpenAI API Key â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”        \n",
+      "remote:        locations:        \n",
+      "remote:          - commit: 4b8c1c7ea6f917af5b8cd305b7bc862c5323cbab        \n",
+      "remote:            path: src/New_Test.ipynb:536        \n",
+      "remote:             \n",
+      "remote:        (?) To push, remove secret from commit(s) or follow this URL to allow the secret.        \n",
+      "remote:        https://github.com/deadpool-kha/Python-Assignment/security/secret-scanning/unblock-secret/2v3tKY3Ph5T1cbYwD3zSqfPa0hO        \n",
+      "remote:             \n",
+      "remote: \n",
+      "remote: \n",
+      "To https://github.com/deadpool-kha/Python-Assignment\n",
+      " ! [remote rejected] main -> main (push declined due to repository rule violations)\n",
+      "error: failed to push some refs to 'https://github.com/deadpool-kha/Python-Assignment'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push origin main  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56b48f3d-be80-417f-a3dd-4382b56fd6e5",
    "metadata": {},
    "outputs": [],
    "source": []
