Initial commit with files and folders

--- a/src/New_Test.ipynb
+++ b/src/New_Test.ipynb
@@ -1096,16 +1096,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "id": "f675f54b-3852-4f61-8e80-aba87c909de5",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'src/New_Test.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 275e611] Initial commit with files and folders\n",
-      " 1 file changed, 103 insertions(+), 1 deletion(-)\n"
+      "[main 25bf7af] Initial commit with files and folders\n",
+      " 1 file changed, 189 insertions(+), 1 deletion(-)\n"
      ]
     }
    ],
@@ -1116,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "id": "72604d7c-5e2b-4a10-8b35-b24c593c8113",
    "metadata": {},
    "outputs": [
